--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Hello World</string>
+    <string name="app_name" translatable="false">LoftMoney</string>
+    <string name="et_title_hint" translatable="false">Title</string>
+    <string name="et_amount_hint" translatable="false">Price</string>
+    <string name="btn_add_title" translatable="false">Add</string>
 </resources>
