--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="et_title_hint" translatable="false">Title</string>
     <string name="et_amount_hint" translatable="false">Price</string>
     <string name="btn_add_title" translatable="false">Add</string>
+    <string name="expences">Расходы</string>
+    <string name="income">Доходы</string>
 </resources>
