--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,4 +4,6 @@
     <string name="et_title_hint" translatable="false">Название</string>
     <string name="et_amount_hint" translatable="false">Цена</string>
     <string name="btn_add_title" translatable="false">Добавить</string>
+    <string name="expences">Расходы</string>
+    <string name="income">Доходы</string>
 </resources>
