--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
     <string name="et_title_hint">Title</string>
     <string name="et_amount_hint">Price</string>
     <string name="btn_add_title">Add</string>
-    <string name="expences">Expences</string>
+    <string name="expenses">Expenses</string>
     <string name="income">Income</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="connection_lost">Sorry we can\'t load your data</string>
+    <string name="invalid_input">Fields are empty</string>
+    <string name="successfully_added">Added successfully</string>
+    <string name="activity_main_toolbar_title">Учет бюджета</string>
 </resources>
