--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="invalid_input">Fields are empty</string>
     <string name="successfully_added">Added successfully</string>
     <string name="activity_main_toolbar_title">Учет бюджета</string>
+    <string name="sign_in">Sign in</string>
 </resources>
